language/move-lang/tests/move_check/expansion/weird_apply_assign.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/weird_apply_assign.move:7:11
  │
7 │         S f = S { f: 0 };
  │           ^
  │           │
  │           Unexpected 'f'
  │           Expected ';'

